--- a/addons/lanyu_appointment/template/web/times_post.html
+++ b/addons/lanyu_appointment/template/web/times_post.html
@@ -8,7 +8,7 @@
     <form action="" method="post" class="form-horizontal form" enctype="multipart/form-data">
         <div class="panel panel-default">
             <div class="panel-heading">
-                修改品牌车系设置
+                修改时间段
             </div>
             <div class="panel-body">
                 <div class="form-group">
@@ -47,6 +47,12 @@
             <input type='hidden' name='id' value="{$theone['id']}" />
             <input type="submit" name="submit" value="提交" class="btn btn-primary col-lg-1" />
             <input type="hidden" name="token" value="{$_W['token']}" />
+            {if $theone['id'] > 0}
+            <span class="col-lg-1"></span>
+            <a href="{php echo $this->createWebUrl('times',array('op'=>'del','id'=>$theone['id']));}">
+                <input type="button" value="删除" class="btn btn-danger col-lg-1" />
+            </a>
+            {/if}
         </div>
     </form>
 </div>
