根据财务要求整理导出导入

--- a/addons/lanyu_sign/template/web/import.html
+++ b/addons/lanyu_sign/template/web/import.html
@@ -48,6 +48,7 @@
                             <th>汇款日期</th>
                             <th>汇款账号</th>
                             <th>汇款金额</th>
+                            <th>订单编号（唯一）</th>
                         </tr>
                         <tr>
                             <th>中行</th>
@@ -55,6 +56,7 @@
                             <th>2017-02-02</th>
                             <th>张先生</th>
                             <th>132.55</th>
+                            <th>20170201</th>
                         </tr>
                     </table>
                     <h5 style="color:red;">*注意，必须要全部都是文本格式，不能是其他格式导入，否则会出错*</h5>
