--- a/addons/lanyu_appointment/template/mobile/types.html
+++ b/addons/lanyu_appointment/template/mobile/types.html
@@ -13,7 +13,7 @@
                 <p>
                     <img src="../attachment/{$type['image']}" style="width:80%;" />
                 </p>
-                <p>{$type['name']}</p>
+                <!--<p>{$type['name']}</p>-->
             </div>
         </a>
         {/loop}
