--- a/addons/lanyu_appointment/template/mobile/choose_day.html
+++ b/addons/lanyu_appointment/template/mobile/choose_day.html
@@ -1,11 +1,11 @@
 {template 'header'}
 <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container" align="center">
-        <h4 style="color:white;">选择日期</h4>
+        <h4 style="color:white;">请选择预约日期</h4>
     </div>
 </nav>
 <div style="padding: 20px 10px 0px 10px">
-    <div class="form-group">
+    <div >
         <select class="form-control" id="month" onchange="change_day();">
             {loop $month_array $m}
             <option value="{$m}" {if $month == $m}selected="selected"{/if}>{$m}月</option>
@@ -15,25 +15,24 @@
     <div class="row">
         {loop $days $day}
         <a href="{php echo $this->createMobileUrl('orders',array('op' => 'choose_time', 'type_id' => $type_id, 'store_id' => $store_id, 'month' => $month,'day' => $day))}">
-            <div class="col-xs-2" align="center">
-                <span class="glyphicon glyphicon-calendar">
-                </span>
-                <p>{$day}</p>
+            <div class="col-xs-3" style="background-image: url('resource/images/day.png');background-repeat:no-repeat;background-position:top;height: 90px;">
+                <h2 align="center" style="padding-top: 10px;">{$day}</h2>
             </div>
         </a>
         {/loop}
     </div>
+    <div class="alert alert-danger" role="alert">最多只能提前15天预约！</div>
 </div>
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container" style="padding-top: 5px;" align="center">
-        <a href="{php echo $this->createMobileUrl('types')}" >
-            <button class="btn btn-danger" style="width:40%;">重新选择类型</button>
-        </a>
-        &nbsp;&nbsp;
-        <button class="btn btn-success" style="width:40%;" onclick="to_choose_time();">下一步</button>
-    </div>
-</nav>
+<!--<nav class="navbar navbar-default navbar-fixed-bottom">-->
+    <!--<div class="container" style="padding-top: 5px;" align="center">-->
+        <!--<a href="{php echo $this->createMobileUrl('types')}" >-->
+            <!--<button class="btn btn-danger" style="width:40%;">重新选择类型</button>-->
+        <!--</a>-->
+        <!--&nbsp;&nbsp;-->
+        <!--<button class="btn btn-success" style="width:40%;" onclick="to_choose_time();">下一步</button>-->
+    <!--</div>-->
+<!--</nav>-->
 <script>
     function change_day(){
         var month = $("#month").val();
