--- a/addons/lanyu_appointment/template/web/order_detail.html
+++ b/addons/lanyu_appointment/template/web/order_detail.html
@@ -1,4 +1,6 @@
 {template 'common/header'}
+<link href="/app/resource/css/star-rating.css" media="all" rel="stylesheet" type="text/css"/>
+<script src="/app/resource/js/bs/star-rating.js" type="text/javascript"></script>
 <ul class="nav nav-tabs">
     <li ><a href="{php echo $this->createWebUrl('order',array('op'=>'index'));}">订单列表</a></li>
     <li class="active"><a href="#">订单详细</a></li>
@@ -25,6 +27,45 @@
                 <span style="color:green">已支付定金</span>
                 {else if $order['status'] == 3 }
                 <span style="color:green">已完成服务</span>
+                {/if}
+                {if $eva}
+                <!-- Button trigger modal -->
+                <a data-toggle="modal" style="align:right" data-target="#myModal">
+                    查看客户评价
+                </a>
+
+                <!-- Modal -->
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title" id="myModalLabel">客户评价</h4>
+                            </div>
+                            <div class="modal-body">
+                                <div class="alert alert-info" role="alert">评价时间：{php echo date('Y-m-d',$eva['create_time'])}</div>
+                                <div class="row">
+                                    {loop $eva_types $type}
+                                    <div class="col-md-3">
+                                        <h4>{$type['eva_name']}</h4>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <input id="input-2b" type="number" class="rating" min="0" max="5" step="1" value="{if $has_eva}{$type['value']}{else}5{/if}" name="eva[{$type['id']}]" {if $has_eva}readonly="readonly"{/if}/>
+                                    </div>
+                                    {/loop}
+                                    <div class="col-md-3"><h4>评价</h4></div>
+                                    <div class="col-md-9">
+                                        <textarea class="form-control" rows="3" name="eva[remark]" {if $has_eva}readonly="readonly"{/if} >{$remark}</textarea>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 {/if}
             </div>
             <div class="alert alert-info" role="alert">
