--- a/addons/lanyu_appointment/template/mobile/change_day.html
+++ b/addons/lanyu_appointment/template/mobile/change_day.html
@@ -21,7 +21,7 @@
         </a>
         {/loop}
     </div>
-    <div class="alert alert-danger" role="alert">最多只能提前15天预约！</div>
+    <div align="center" style="color:#C7C7C7;">可预约14天内的档期，新一天档期于每天10:00开放</div>
 </div>
 
 <script>
