--- a/addons/lanyu_appointment/template/mobile/change_times.html
+++ b/addons/lanyu_appointment/template/mobile/change_times.html
@@ -17,7 +17,7 @@
         </div>
         {/loop}
     </div>
-    <div class="alert alert-danger" role="alert">
+    <div align="center" style="color:#C7C7C7;">
         红色为不能选择或者已经预约满的时间
     </div>
 </div>
