--- a/addons/lanyu_appointment/template/mobile/welcome.html
+++ b/addons/lanyu_appointment/template/mobile/welcome.html
@@ -1,10 +1,10 @@
 {template 'header'}
-<nav class="navbar navbar-inverse navbar-static-top">
-    <div class="container" align="center">
-        <h4 style="color:white;">{$welcome['title']}</h4>
+<nav class="navbar navbar-inverse center" style="margin-bottom: 0px;text-align: center;" >
+    <div class="navbar-header " >
+        <h3 style="color:white;">{$welcome['title']}</h3>
     </div>
 </nav>
-<div style="padding: 0px 10px 0px 10px">
+<div style="padding: 0px 0px 0px 0px">
     {$content}
 </div>
 
