--- a/addons/lanyu_sign/template/web/sign_list.html
+++ b/addons/lanyu_sign/template/web/sign_list.html
@@ -10,6 +10,17 @@
         var v_status = $("#v_status").val();
         location.href="{php echo $this->createWebUrl('sign',array('op'=>'index'));}&status="+status+"&bank_id="+bank_id+"&begin_day="+begin_day+"&end_day="+end_day+"&begin_time="+begin_time+"&end_time="+end_time+"&v_status="+v_status;
     }
+    function a(id){
+        var status = $("#status").val();
+        var bank_id = $("#bank_id").val();
+        var begin_day = $("#begin_day").val();
+        var end_day = $("#end_day").val();
+        var begin_time = $("#begin_time").val();
+        var end_time = $("#end_time").val();
+        var v_status = $("#v_status").val();
+        var page = "{$pindex}";
+        location.href="{php echo $this->createWebUrl('sign',array('op'=>'edit'))}"+"&id="+id+"&status="+status+"&f_bank_id="+bank_id+"&begin_day="+begin_day+"&end_day="+end_day+"&begin_time="+begin_time+"&end_time="+end_time+"&v_status="+v_status+"&page="+page;
+    }
     function export_data(){
         var status = $("#status").val();
         var bank_id = $("#bank_id").val();
@@ -233,7 +244,7 @@
                     {if $sign['status'] == 1}
                     <a href="{php echo $this->createWebUrl('sign',array('id' => $sign['id'],'op'=>'examine'))}" title="审核" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-ok"></span></a>
                     <a href="{php echo $this->createWebUrl('sign',array('id' => $sign['id'],'op'=>'del'))}" onclick="return confirm('如果已审，请先将ERP生成的收款单删除！！');return false;" title="删除" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-remove"></span></a>
-                    <a href="{php echo $this->createWebUrl('sign',array('id' => $sign['id'],'op'=>'edit'))}" title="修改" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-edit"></span></a>
+                    <a onclick="a({$sign['id']});" title="修改" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-edit"></span></a>
                     {else if $sign['status'] == 2}
                     <a href="{php echo $this->createWebUrl('sign',array('id' => $sign['id'],'op'=>'return'))}" onclick="return confirm('请先将ERP生成的收款单删除！！');return false;" title="返审" data-toggle="tooltip" data-placement="bottom" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-floppy-remove"></span></a>
                     {/if}
