--- a/addons/lanyu_appointment/template/web/package.html
+++ b/addons/lanyu_appointment/template/web/package.html
@@ -49,7 +49,9 @@
                                 <p>{$u['name']}</p>
                                 <p>原价：￥{$u['price']}</p>
                                 <p>套餐价：￥{$u['p_price']}</p>
+                                <button class="btn btn-danger" onclick="del({$u['id']});">删除</button>
                             </div>
+
                         </div>
                         {/loop}
                     </div>
@@ -78,6 +80,24 @@
                 }
             });
         }
+    }
+    function del(id){
+        if(confirm("是否要删除这个套餐关联？")){
+            var url = "{php echo $this->createWebUrl('store', array('op'=>'del_package'))}";
+            $.ajax({
+                type : 'post',
+                url : url,
+                data : {'id' : id},
+                success : function(data){
+                    if(data == 111){
+                        location.reload();
+                    }
+                }
+
+            });
+        }
+
+
     }
 </script>
 
