--- a/addons/lanyu_appointment/template/mobile/change_day.html
+++ b/addons/lanyu_appointment/template/mobile/change_day.html
@@ -1,27 +1,29 @@
 {template 'header'}
+<link href="/addons/lanyu_appointment/template/mobile/css/choose_day.css" rel="stylesheet">
 <nav class="navbar navbar-inverse navbar-static-top">
     <div class="container" align="center">
         <h4 style="color:white;">请选择预约日期</h4>
     </div>
 </nav>
-<div style="padding: 20px 10px 0px 10px">
-    <div >
-        <select class="form-control" id="month" onchange="change_day();">
-            {loop $month_array $m}
-            <option value="{$m}" {if $month == $m}selected="selected"{/if}>{$m}月</option>
-            {/loop}
-        </select>
-    </div>
-    <div class="row">
+<div>
+    <div class="wrap">
         {loop $days $day}
-        <a href="{php echo $this->createMobileUrl('my_orders',array('op' => 'change_day','order_id'=>$order_id ,'year' =>$year ,'month' => $month, 'day' => $day))}">
-            <div class="col-xs-3" style="background-image: url('resource/images/day.png');background-repeat:no-repeat;background-position:top;height: 90px;">
-                <h2 align="center" style="padding-top: 10px;">{$day}</h2>
-            </div>
+        <a href="{php echo $this->createMobileUrl('my_orders',array('op' => 'change_day','order_id'=>$order_id ,'year' =>$day['year'] ,'month' => $day['month'], 'day' => $day['day']))}">
+            <date-section class="available">
+                <date>
+                    <month>{$day['month']}月</month>
+                    <day>{$day['day']}</day>
+                    <week>周{$day['week']}</week>
+                </date>
+                <date-select>
+                    <input type="checkbox" name="date-selected" val="3.22" checked="true" />
+                    <label for="date-check"></label>
+                </date-select>
+            </date-section>
         </a>
         {/loop}
     </div>
-    <div align="center" style="color:#C7C7C7;">可预约14天内的档期，新一天档期于每天10:00开放</div>
+    <div align="center" style="clear:both; color:#C7C7C7;">可预约14天内的档期，新一天档期于每天10:00开放</div>
 </div>
 
 <script>
