--- a/addons/lanyu_appointment/template/mobile/order_post.html
+++ b/addons/lanyu_appointment/template/mobile/order_post.html
@@ -13,17 +13,17 @@
         <div class="panel-body">
             <div class="input-group">
                 <span class="input-group-addon" >称呼：</span>
-                <input type="text" class="form-control" id="name" placeholder="您的称呼" aria-describedby="basic-addon1">
+                <input type="text" class="form-control" id="name" value="{$order['name']}" placeholder="您的称呼" aria-describedby="basic-addon1">
             </div>
             <br />
             <div class="input-group">
                 <span class="input-group-addon" >电话：</span>
-                <input type="text" class="form-control" id="phone" placeholder="手机号码" aria-describedby="basic-addon1">
+                <input type="text" class="form-control" id="phone" value="{$order['phone']}" placeholder="手机号码" aria-describedby="basic-addon1">
             </div>
             <br />
             <div class="input-group">
                 <span class="input-group-addon" >Email：</span>
-                <input type="text" class="form-control" id="email" placeholder="常用邮箱" aria-describedby="basic-addon1">
+                <input type="text" class="form-control" id="email" value="{$order['email']}" placeholder="常用邮箱" aria-describedby="basic-addon1">
             </div>
         </div>
     </div>
