--- a/addons/lanyu_appointment/template/web/package.html
+++ b/addons/lanyu_appointment/template/web/package.html
@@ -49,9 +49,8 @@
                                 <p>{$u['name']}</p>
                                 <p>原价：￥{$u['price']}</p>
                                 <p>套餐价：￥{$u['p_price']}</p>
-                                <button class="btn btn-danger" onclick="del({$u['id']});">删除</button>
+                                <button class="btn btn-danger" onclick="del({$u['p_id']});">删除</button>
                             </div>
-
                         </div>
                         {/loop}
                     </div>
